# TugasStrukdis

./: README.md  pyproject.toml
assets/: Sample.java
src/jvra/: requirements.txt  ui.py
src/tugasstrukdis/: __init__.py  graph.py  parser.py  sidebarui.py  ui.py
