[project]
name = "tugasstrukdis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Smeueg", email = "smeueg@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "javalang>=0.13.0",
]

[project.scripts]
tugasstrukdis = "tugasstrukdis:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
