[project]
name = "tugasstrukdis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Smeueg", email = "smeueg@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gcol>=2.1",
    "graphviz>=0.21",
    "javalang>=0.13.0",
    "kirjava-jvm>=0.1.8",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "streamlit>=1.52.2",
]

[project.scripts]
tugasstrukdis = "tugasstrukdis:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
