[project]
name = "jvra"
version = "0.1.0"
description = "Program untuk mensimulasikan pengalokasian variable pada kode Java"
readme = "README.md"
authors = [
    { name = "Kumara Ivan Anuraga", email = "ivananuraga5@gmail.com" },
    { name = "Kendrick Hansell Setiawan", email = "hansellkendrick@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "gcol>=2.1",
    "graphviz>=0.21",
    "javalang>=0.13.0",
    "kirjava-jvm>=0.1.8",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "streamlit>=1.52.2",
]

[project.scripts]
jvra = "jvra.ui:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
